# jfrog-ai-demo

./: .gitignore  README.md
.github/workflows/: build-and-deploy.yml  comprehensive-build-and-deploy.yml  notebooks-execute.yml
basic-demo/: .dockerignore  .env.example  Dockerfile  README.md  app.py  conftest.py  pyproject.toml  requirements.txt  run-tests.sh
basic-demo/main/: __init__.py  model.py  requirements.txt
basic-demo/tests/: __init__.py
basic-demo/tests/ut/: test_model.py
comprehensive-demo/: .gitignore  README.md
comprehensive-demo/act1/: Dockerfile  churn_prototype.py  requirements.txt
comprehensive-demo/act2/: README.md  configure_proxy.sh
comprehensive-demo/act3/: Dockerfile  churn_prototype.py  requirements.txt
comprehensive-demo/act4/: README.md
notebooks/: .env.example  README.md  requirements.txt
notebooks/devops-helper/: README.md  conda.yml  llm_finetuning_devops.ipynb  requirements.txt  run_finetuning.py
notebooks/devops-helper/.ipynb_checkpoints/: llm_finetuning_devops-checkpoint.ipynb
notebooks/devops-helper/code_dir/: predict.py
notebooks/devops-helper/main/: config.py  model.py
notebooks/fraud-detection/: README.md  conda.yml  credit-card-fraud-detection.ipynb  requirements.txt
notebooks/fraud-detection/.ipynb_checkpoints/: credit-card-fraud-detection-checkpoint.ipynb
notebooks/fraud-detection/main/: model.py
notebooks/sentiment/: 01-sentiment-from-artifactory.ipynb  02-frogml-log-model-ai-bom.ipynb  03-huggingface-proxy-demo.ipynb
specs/: comprehensive-demo-spec.md
